menifest file update username

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: angular-container
-          image: your-dockerhub-username/angular-app:latest
+          image: dhirajnande/angular-app:latest
           ports:
             - containerPort: 80
 ---
