--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      IMAGE_TAG: ${{ github.run_number }}
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -27,7 +30,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: dhirajnande/angular-app:latest
+        tags: dhirajnande/angular-app:${{ env.IMAGE_TAG }}
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
@@ -47,5 +50,8 @@ jobs:
 
     - name: Deploy to EKS using manifest
       run: |
+        # Update the image tag in the deployment manifest dynamically
+        sed -i "s|image: dhirajnande/angular-app:.*|image: dhirajnande/angular-app:${{ env.IMAGE_TAG }}|" k8s/deployment.yaml
+
         kubectl apply -f k8s/deployment.yaml
         kubectl rollout status deployment angular-deployment
